// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth search form Form should render correctly with a user 1`] = `
<div
  className="sc-Axmtr hjHhIB"
>
  <div
    className="sc-AxmLO czuJjP"
  >
    <form
      onSubmit={[Function]}
    >
      <label
        className="sc-AxjAm bnkTnU"
        htmlFor="user"
      >
        <span
          className="sc-AxirZ lbZqdG"
        >
          Username or email address
        </span>
        <input
          className="sc-AxhUy hUbURi"
          defaultValue="someuser"
          id="user"
          name="user"
          onChange={[Function]}
          type="text"
        />
      </label>
      <button
        className="sc-AxgMl dzrPxP"
        disabled={false}
        id="search-button"
        type="submit"
      >
        Search
      </button>
    </form>
  </div>
</div>
`;

exports[`Auth search form Form should render correctly with no user 1`] = `
<div
  className="sc-Axmtr hjHhIB"
>
  <div
    className="sc-AxmLO czuJjP"
  >
    <form
      onSubmit={[Function]}
    >
      <label
        className="sc-AxjAm bnkTnU"
        htmlFor="user"
      >
        <span
          className="sc-AxirZ lbZqdG"
        >
          Username or email address
        </span>
        <input
          className="sc-AxhUy hUbURi"
          defaultValue=""
          id="user"
          name="user"
          onChange={[Function]}
          type="text"
        />
      </label>
      <button
        className="sc-AxgMl dzrPxP"
        disabled={false}
        id="search-button"
        type="submit"
      >
        Search
      </button>
    </form>
  </div>
</div>
`;
